@@ -116,6 +116,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #4890: Handle empty text search pattern in Tkinter.Text.search.
+
 - Partial fix to issue #1731706: memory leak in Tkapp_Call when calling
   from a thread different than the one that created the Tcl interpreter.
   Patch by Robert Hancock.
